Add an action to hide/show the status bar

Each view has its own status bar.  For the moment, this
action toggles the status bar of the current view only.

BUG:111162
REVIEW:105337
GUI: